@@ -5,7 +5,6 @@ import java.awt.Component;
 import java.beans.PropertyChangeEvent;
 import java.beans.PropertyChangeListener;
 import java.util.Arrays;
-import java.util.Iterator;
 import java.util.ListIterator;
 
 import javax.swing.DefaultCellEditor;
