@@ -1,6 +1,5 @@
 package com.hifiremote.jp1;
 
-import java.io.File;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Properties;
