@@ -1,7 +1,6 @@
 package com.hifiremote.jp1;
 
 import java.awt.Color;
-import java.util.ArrayList;
 import java.util.List;
 
 import javax.swing.DefaultCellEditor;
